<resources>
    <string name="app_name">Share a Smiles</string>

    <string name="client_id">9217a25d70d24e57a0e6967b64075743</string>
    <string name="callback_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>

    <string name="facebook_app_id">536307603859156</string>
    <string name="fb_login_protocol_scheme">fb536307603859156</string>


    // login
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="register">Register</string>
    <string name="joinUs">Join Us</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="required">* Required</string>

    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="signupWithFacebook">SignUp with Facebook</string>
    <string name="instagramLogin">InstagramLogin</string>


    <string name="fullName">Full Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="dob">Date of Birth</string>

    <string name="update">Update</string>


    <string name="LoginIntoShareSmiles">Login In to ShareSmiles</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>

    <string name="editProfile">Edit Profile</string>
    <string name="logout">Logout</string>



    <string name="addItem">AddItem</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="productName">Product Name</string>
    <string name="productDescription">Product Description</string>
    <string name="price">Price</string>
    <string name="tags">Tags</string>
    <string name="category">Category</string>
    <string name="organisation">Organisation</string>

    <string name="dismiss">Dismiss</string>
    <string name="Ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="sports">Sports</string>
    <string name="cloths">Cloths</string>
    <string name="footware">Footware</string>
    <string name="entertainment">Entertainment</string>
    <string name="others">Others</string>
    <string name="miscellenous">Miscellenous</string>


    <string name="pleaseEnterProductName">Please Enter Product Name</string>
    <string name="pleaseEnterProductDesc">Please Enter Product Description</string>
    <string name="pleaseEnterProductPrice">Please Enter Product Price</string>
    <string name="pleaseSelectCategory">Please Select Category</string>
    <string name="pleaseSelectOrganisation">Please Select Organisation</string>

    <string name="pleaseEnterFirstName">Please Enter First Name</string>
    <string name="pleaseEnterLastName">Please Enter Last Name</string>
    <string name="pleaseEnterAddress">Please Enter Address</string>
    <string name="pleaseSelectCity">Please Select City</string>
    <string name="pleaseEnterZipCode">Please Enter ZipCode</string>
    <string name="pleaseSelectDOB">Please Select DOB </string>

    <string name="dataNotAvailable">Data not available</string>

    <string name="buy">Buy</string>
    <string name="sold">Sold</string>
    <string name="share">Share</string>
    <string name="activityTitle">Activity Title</string>
    <string name="activityDesc">Activity Description</string>
    <string name="timeAgo">1 day ago</string>

    <!--<style name="activityTitle">Activity Title</style>-->
    <!--<style name="activityDesc">Activity Description</style>-->
    <!--<style name="timeAgo">1 week ago</style>-->


    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>

    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>


    <string name="detailScreen">Detail Screen</string>
    <string name="noDocumentFound">No Document Found</string>

</resources>
