<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:bind="http://schemas.android.com/apk/res/android"
    xmlns:bind.itemImage="http://schemas.android.com/tools"
    xmlns:chip="http://schemas.android.com/tools">

    <data>
        <variable
            name="users"
            type="com.cipher.sharesmilesandroid.modals.Users" />

        <variable
            name="products"
            type="com.cipher.sharesmilesandroid.modals.Products" />

        <variable
            name="productsusers"
            type="com.cipher.sharesmilesandroid.modals.ProductUser" />
    </data>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<include-->
        <!--layout="@layout/toolbar"/>-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        app:layout_scrollFlags="scroll|enterAlways"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/md_red_600"
        app:titleTextColor="@color/md_white_1000"
        app:title="@string/detailScreen"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:visibility="visible">

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/_30sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/placeholer"
            android:scaleType="fitXY"
            bind:itemImage="@{productsusers.products.productImage}"/>

        <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/productName"
            android:textSize="@dimen/_15sdp"
            android:textColor="@color/md_red_600"
            android:text="@{productsusers.products.productName}"
           android:layout_margin="@dimen/_10sdp"/>

        <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
            android:id="@+id/tvProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/price"
            android:textColor="@color/md_red_600"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:text="@{productsusers.products.productPrice}"
            android:textSize="@dimen/_15sdp"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_marginEnd="@dimen/_10sdp"
                android:onClick="onViewClicked"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:text="@string/share"
                app:icon="@drawable/ic_share"/>


        </androidx.appcompat.widget.LinearLayoutCompat>



        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/md_green_900"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_10sdp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:cardBackgroundColor="@color/md_green_900"
                app:cardCornerRadius="@dimen/_25sdp"
                android:layout_gravity="center">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    bind:profileImage="@{productsusers.users.userImage}" />

            </com.google.android.material.card.MaterialCardView>


            <com.cipher.sharesmilesandroid.ui.BeautifullTextView
                android:id="@+id/tvFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:hint="@string/fullName"
                android:text="@{productsusers.users.fullName}"
                android:textSize="@dimen/_15sdp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/md_green_900"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/description"
                />

            <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:textColor="@color/md_red_600"
                android:hint="@string/description"
                android:text="@{productsusers.products.productDescription}"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sdp"
                android:text="@string/category"/>

            <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/md_red_600"
                android:layout_marginStart="@dimen/_10sdp"
                android:text="@{productsusers.products.productCategory}"
                android:hint="@string/category"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp">

            <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_15sdp"
                android:visibility="gone"
                android:textColor="@color/md_red_600"
                android:text="@string/tags"/>

            <com.cipher.sharesmilesandroid.chipsSet.ChipView
                android:id="@+id/chipView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                chip:chip_background="@color/red"
                chip:chip_background_selected="@color/grey"
                chip:chip_corner_radius="5dp"
                chip:chip_line_spacing="20dp"
                chip:chip_padding="10dp"
                chip:chip_side_padding="10dp"
                chip:chip_spacing="16dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>



    </LinearLayout>

    </ScrollView>


</LinearLayout>

</layout>