<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:padding="@dimen/_5sdp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="@dimen/_10sdp"
                    app:cardElevation="@dimen/_5sdp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/imgProfile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/placeholer"/>


                </com.google.android.material.card.MaterialCardView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_sports"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:elevation="@dimen/_10sdp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_5sdp">

                <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityTitle"
                    android:textSize="@dimen/_13sdp"
                    android:textColor="@color/colorAccent"/>

                <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/activityDesc"
                    android:textSize="@dimen/_10sdp"
                    android:textColor="@color/md_red_400"/>

                <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeAgo"
                    android:textSize="@dimen/_10sdp"
                    android:layout_gravity="end"
                    android:textColor="@color/md_red_400"/>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>