<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/transparent">

   <com.google.android.material.card.MaterialCardView
       android:id="@+id/cardDialog"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/transparent"
       app:cardCornerRadius="@dimen/_20sdp"
       android:layout_marginTop="@dimen/_40sdp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="@dimen/_70sdp"
              android:background="@color/md_red_600"
              android:gravity="center|bottom">


              <com.cipher.sharesmilesandroid.ui.BeautifullTextView
                  android:id="@+id/tvTitle"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/app_name"
                  android:gravity="center|bottom"
                  android:textColor="@color/md_white_1000"
                  android:layout_gravity="bottom"
                  android:textSize="@dimen/_16sdp" />
          </LinearLayout>



          <com.cipher.sharesmilesandroid.ui.HelveticaNeueTextView
              android:id="@+id/tvMsg"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:gravity="center"
             android:padding="@dimen/_10sdp"
              android:text="asdasdasdjndjbjdbfjsafj
lsdmflldlfmdlfmldmfldmflmdlfmlsdmflmdlfmldmfldmlfmdlfmldmfldmlfmldmfldmflmdlf"/>



          <View
              android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/md_grey_500"/>
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingEnd="@dimen/_10sdp">


              <com.google.android.material.button.MaterialButton
                  android:id="@+id/tvPositive"
                  style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/Ok"
                  android:padding="@dimen/_10sdp"
                  android:textSize="@dimen/_13sdp"
                  android:textColor="@color/colorAccent"
                  android:layout_alignParentRight="true"/>

              <com.google.android.material.button.MaterialButton
                  android:id="@+id/tvNegative"
                  style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/cancel"
                  android:layout_centerInParent="true"
                  android:textColor="@color/colorAccent"
                  android:padding="@dimen/_13sdp"
                  android:layout_toLeftOf="@id/tvPositive"/>

          </RelativeLayout>

      </LinearLayout>

   </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_anchor="@id/cardDialog"
        app:cardBackgroundColor="@color/md_red_600"
        app:layout_anchorGravity="top|center"
        android:elevation="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:elevation="@dimen/_10sdp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_applogo"/>

    </com.google.android.material.card.MaterialCardView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>